--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,3 +22,29 @@ header{
   a:hover{
     border-bottom: 2px solid white;
   }
+
+  main{
+    display: grid;
+    grid-template-columns: 2fr 10fr;
+  }
+   aside nav{
+    border-right: 1px solid #2b2b2b;
+    height: 100vh;
+    background-color: black;
+    
+  }
+
+  nav div{
+    padding: 18px;
+    margin: 0 auto;
+    background-color: #183d3d;
+    color: white;
+    width: 120px;
+    margin-bottom: 10px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 18px;
+     }
+  nav div:hover{
+    background-color: #5c8374;
+  }
