--- a/public/lib/styles/styles.css
+++ b/public/lib/styles/styles.css
@@ -2,14 +2,14 @@ body{
     margin: 0;
     padding: 0;
 }
-header{
+ header{
     display: flex;
     justify-content: space-between;
     background-color: black;
     color: white;
     padding: 20px;
-    position: sticky;
-    top: 0;
+   position: sticky;
+   top: 0;
   }
   .heading{
     font-size: 30px;
@@ -25,7 +25,7 @@ header{
     border-bottom: 2px solid white;
   }
 
-  main{
+   /* main{
     display: grid;
     grid-template-columns: 2fr 10fr;
   }
@@ -56,4 +56,43 @@ header{
  a:visited{
   text-decoration: none;
  }
+ */
+
  
+ 
+
+.main{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+img{
+  height: 311px;
+
+}
+.card{
+  width: 292px;
+  margin: 5px;
+}
+.card-body{
+  height: 150px;
+}
+footer{
+     font-size: 20px;
+    background-color: black;
+    color: white;
+    padding: 12px;
+    text-align: center;
+    border: 1px;
+
+
+}
+ .back span a{
+  position: absolute;
+  left: 10px;
+  font-size: 20px;
+  
+  text-decoration: none;
+  color:white;
+}
