--- a/public/lib/styles/styles.css
+++ b/public/lib/styles/styles.css
@@ -8,8 +8,8 @@ body{
     background-color: black;
     color: white;
     padding: 20px;
-   position: sticky;
-   top: 0;
+   
+  
   }
   .heading{
     font-size: 30px;
@@ -64,7 +64,7 @@ body{
 .main{
   display: flex;
   flex-wrap: wrap;
-  
+  justify-content: center;
 }
 
 img{
@@ -96,3 +96,4 @@ footer{
   text-decoration: none;
   color:white;
 }
+
