--- a/public/templates/watch.htm
+++ b/public/templates/watch.htm
@@ -1,4 +1,3 @@
-
 <div class="main" >
     <div id="template" style="display: none;">
       <div class="card  h-50">
@@ -7,7 +6,7 @@
       </div>
       <div class="card-body">
          <p class="card-title fw-bold" style="text-align: center;">{{brand}}</p>
-        <p class="card-text" style="font-weight: 500;">{{desc}}</p>
+        <p class="card-text" style="font-weight: 500;">{{pname}}</p>
         <p class="card-text text-success">{{price}}</p>
       </div>
       <div class="card-footer">
@@ -20,75 +19,75 @@
     
           var  menswears=[
                 {
-                   desc:" Casual Shirt for Men|| Shirt for Men|| Men Stylish Shirt ",
+                    pname:" Casual Shirt for Men|| Shirt for Men|| Men Stylish Shirt ",
                     price:"₹600",
                     url :"assets/mens_wear/m1.jpg",
                     brand: "Lymio"
                 
                 },
                 {
-                   desc:"Shirt for Men | Tropical Leaf Printed Rayon Shirts for Men",
+                    pname:"Shirt for Men | Tropical Leaf Printed Rayon Shirts for Men",
                     price:"₹500",
                     url :"assets/mens_wear/m2.jpg",
                     brand: "Leriya Fashion"
                 },
                 {
-                   desc:"Regular Men's Cotton Designer T-Shirt (EB1T67)",
+                    pname:"Regular Men's Cotton Designer T-Shirt (EB1T67)",
                     price:"₹700",
                     url :"assets/mens_wear/m3.jpg",
                     brand:"EYEBOGLER"
                 },
                 {
-                   desc:" Combo of Men's Cotton Regular Fit Full Sleeve Casual Shirt",
+                    pname:" Combo of Men's Cotton Regular Fit Full Sleeve Casual Shirt",
                     price:"₹600",
                     url :"assets/mens_wear/m4.jpg",
                     brand : "Zombom"
                 },
                 {
-                   desc:"Men's Super Combed Cotton Checkmate Boxer Shorts ",
+                    pname:"Men's Super Combed Cotton Checkmate Boxer Shorts ",
                     price:"₹500",
                     url :"assets/mens_wear/m5.jpg",
                     brand :"Chromozome"
                 },
                 {
-                   desc:"Stylish Men Multicolored Cotton Shorts-Pack of 2",
+                    pname:"Stylish Men Multicolored Cotton Shorts-Pack of 2",
                     price:"₹700",
                     url :"assets/mens_wear/m6.jpg",
                     brand :"hotfits"
                 },
                 {
-                   desc:" Shirt for Men || Soft Rayon Multi Printed Shirts for Men ",
+                    pname:" Shirt for Men || Soft Rayon Multi Printed Shirts for Men ",
                     price:"₹600",
                     url :"assets/mens_wear/m7.jpg",
                     brand :"OM SAI LATEST CREATION"
                 },
                 {
-                   desc:"Men's Rayon Shirt And Shorts Combo Suit",
+                    pname:"Men's Rayon Shirt And Shorts Combo Suit",
                     price:"₹900",
                     url :"assets/mens_wear/m8.jpg",
                     brand :"N T CREATION"
                 },
                 {
-                   desc:"Men's Skinny Jeans (XCYA01711-B7_Dark Blue",
+                    pname:"Men's Skinny Jeans (XCYA01711-B7_Dark Blue",
                     price:"₹900",
                     url :"assets/mens_wear/m9.jpg",
                     brand :"Parx"
                 },
                 {
-                   desc:"Men's Stretch Jogger Jeans",
+                    pname:"Men's Stretch Jogger Jeans",
                     price:"₹750",
                     url :"assets/mens_wear/m10.jpg",
                     brand :"Neostreak"
                 },
               
                 {
-                   desc:"Men's Regular Fit Causal Trouser",
+                    pname:"Men's Regular Fit Causal Trouser",
                     price:"₹600",
                     url :"assets/mens_wear/m11.jpg",
                     brand :"TOPLOT"
                 },
                 {
-                   desc:"Men's Solid Lycra Slim Fit Stretchable Casual Wear",
+                    pname:"Men's Solid Lycra Slim Fit Stretchable Casual Wear",
                     price:"₹500",
                     url :"assets/mens_wear/m12.jpg",
                     brand :"Boostrix"
